chore: update project name and refine railway deployment script

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pipes-sdk-deploy-test",
+  "name": "pipes-sdk-deploy-test-2",
   "version": "0.0.1",
   "type": "module",
   "private": true,
